fix thumbnail image on small screen
no idea why sqsp sets it to 67% when screen is mobile size.

--- a/squarespace/blog author photo/blog-author-photo.css
+++ b/squarespace/blog author photo/blog-author-photo.css
@@ -37,6 +37,7 @@ article.photo-added {
   .post .excerpt-thumb.big-thumb {
     float: initial;
     width: 100%;
+    max-width: initial;
     * {
       position: initial !important;
       padding-bottom: 0 !important;
